FIX and aling responses, errors. FIX swagger. FIX domain logic (#12)
