# src/api/project/api/dto/project.go
@@ -1,25 +1,25 @@
 package dto
 
 import (
-	"proyectos/src/api/constants"
 	"proyectos/src/api/errors"
 	"proyectos/src/api/project/domain/model"
+	"proyectos/src/api/utils"
 	"time"
 )
 
 type Project struct {
-	ID          int64     `validate:"gt=0" json:"id"`
-	Name        string    `validate:"required,min=2,max=100" json:"name"`
-	Description string    `validate:"required" json:"description"`
-	StartDate   time.Time `validate:"required" json:"start_date"`
-	FinishDate  time.Time `validate:"required" json:"finish_date"`
+	ID          int64     `validate:"gt=0" json:"id" swaggerignore:"true"`
+	Name        string    `validate:"required,min=2,max=100" json:"name" example:"Project's name"`
+	Description string    `validate:"required" json:"description" example:"Project's description"`
+	StartDate   time.Time `validate:"required" json:"start_date" example:"2021-12-14T12:41:09.993-04:00"`
+	FinishDate  time.Time `validate:"required" json:"finish_date" example:"2021-12-14T12:41:09.993-04:00"`
 	WorkedHours int       `json:"worked_hours"`
-	Leader      string    `json:"leader"`
-	State       string    `json:"state"`
+	Leader      string    `json:"leader" example:"Project's leader"`
+	State       string    `json:"state" example:"Project's state" enums:"TODO,IN_PROGRESS,DONE"`
 }
 
 func (p *Project) ToModel() *model.Projects {
-	state := constants.ToDo
+	state := utils.ToDo
 	if len(p.State) > 0 {
 		state = p.State
 	}
@@ -60,7 +60,7 @@ func MapToProjects(modelProjects []*model.Projects) []*Project {
 }
 
 func (p *Project) ValidateState() error {
-	if !constants.State(p.State).IsValid() {
+	if !utils.State(p.State).IsValid() {
 		return errors.NewErrInvalidState(p.State)
 	}
 	return nil
