# src/api/project/api/handler_project_api.go
@@ -6,6 +6,7 @@ import (
 	"proyectos/src/api/errors"
 	"proyectos/src/api/project/api/dto"
 	"proyectos/src/api/project/domain"
+	"proyectos/src/api/utils"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
@@ -22,15 +23,15 @@ type ProjectHandler struct {
 // @Tags         Projects
 // @Accept       json
 // @Produce      json
-// @Success      200  {array}  dto.Project
-// @Failure      422  {object}	errors.ErrResponse
-// @Failure      500  {object}	errors.ErrResponse
+// @Success      200  {array}  utils.Project
+// @Failure      422  {object} errors.ErrResponse
+// @Failure      500  {object} errors.ErrResponse
 // @Router       /projects [get]
 func (ph *ProjectHandler) GetAll(g *gin.Context) {
 
 	dm, err := ph.Service.GetAll(g)
 	if err != nil {
-		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(err))
+		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(err, "error.getAll.projects"))
 		return
 	}
 
@@ -44,7 +45,7 @@ func (ph *ProjectHandler) GetAll(g *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Param        id path int true "project ID"
-// @Success      200  {object}  dto.Project
+// @Success      200  {object}  utils.Project
 // @Failure      422  {object}	errors.ErrResponse
 // @Failure      500  {object}	errors.ErrResponse
 // @Router       /projects/:id [get]
@@ -52,7 +53,7 @@ func (ph *ProjectHandler) GetByID(g *gin.Context) {
 
 	dm, err := ph.Service.GetById(g, g.Param("id"))
 	if err != nil {
-		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(err))
+		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(err, "error.getByID.projects"))
 		return
 	}
 
@@ -66,7 +67,8 @@ func (ph *ProjectHandler) GetByID(g *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Param        project body dto.Project true "Create a project"
-// @Success      200  {object}  dto.Project
+// @Success      200  {object}  utils.Project
+// @Failure      400  {object}	errors.ErrResponse
 // @Failure      422  {object}	errors.ErrResponse
 // @Failure      500  {object}	errors.ErrResponse
 // @Router       /projects [post]
@@ -75,20 +77,28 @@ func (ph *ProjectHandler) Post(g *gin.Context) {
 	dp := dto.Project{}
 	err := g.BindJSON(&dp)
 	if err != nil {
+		g.AbortWithStatusJSON(http.StatusBadRequest, errors.NewErrResponse(err, "error.Post.bindJson.projects"))
 		return
 	}
 
 	validate := validator.New()
-	valerr := validate.StructExcept(dp, "ID")
-
-	if valerr != nil {
-		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(valerr))
+	valErr := validate.StructExcept(dp, "ID")
+	if valErr != nil {
+		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(valErr, "error.Post.validate.projects"))
 		return
 	}
 
-	dm, valerr := ph.Service.Insert(g, dp.ToModel())
+	if len(dp.State) > 0 {
+		err = dp.ValidateState()
+		if err != nil {
+			g.AbortWithStatusJSON(http.StatusBadRequest, errors.NewErrResponse(err, "error.Put.validateState.projects"))
+			return
+		}
+	}
+
+	dm, err := ph.Service.Insert(g, dp.ToModel())
 	if err != nil {
-		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(valerr))
+		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(err, "error.Post.insert.projects"))
 		return
 	}
 	g.JSON(http.StatusOK, dto.FromModel(dm))
@@ -102,8 +112,9 @@ func (ph *ProjectHandler) Post(g *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Param        id path int true "project ID"
-// @Param        state body constants.StateDTO true "Update a project's state"
-// @Success      200  {object}  dto.Project
+// @Param        state body utils.StateDTO true "Update a project's state"
+// @Success      200  {object}  utils.Project
+// @Failure      400  {object}	errors.ErrResponse
 // @Failure      422  {object}	errors.ErrResponse
 // @Failure      500  {object}	errors.ErrResponse
 // @Router       /projects/:id/state [patch]
@@ -120,23 +131,29 @@ func (ph *ProjectHandler) Patch(g *gin.Context) {
 		return
 	}
 	dp.ID = i
-	g.BindJSON(&dp)
+
+	err = g.BindJSON(&dp)
+	if err != nil {
+		g.AbortWithStatusJSON(http.StatusBadRequest, errors.NewErrResponse(err, "error.Patch.bindJson.projects"))
+		return
+	}
 
 	validate := validator.New()
+	valErr := validate.StructPartial(dp, "state")
+	if valErr != nil {
+		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(valErr, "error.Patch.validate.projects"))
+		return
+	}
 
-	valerr := validate.StructPartial(dp, "state")
-
-	if valerr != nil {
-		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(valerr))
+	err = dp.ValidateState()
+	if err != nil {
+		g.AbortWithStatusJSON(http.StatusBadRequest, errors.NewErrResponse(err, "error.Put.validateState.projects"))
 		return
 	}
 
 	dm, err := ph.Service.Update(g, dp.ToModel())
 	if err != nil {
-		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, ErrResponse{
-			Error:   err.Error(),
-			Message: "Cannot Save",
-		})
+		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(err, "error.Patch.update.projects"))
 		return
 	}
 	g.JSON(http.StatusOK, dto.FromModel(dm))
@@ -150,7 +167,8 @@ func (ph *ProjectHandler) Patch(g *gin.Context) {
 // @Produce      json
 // @Param        id path int true "Project ID"
 // @Param        project body dto.Project true "Update a project"
-// @Success      200  {object}  dto.Project
+// @Success      200  {object}  utils.Project
+// @Failure      400  {object}	errors.ErrResponse
 // @Failure      422  {object}	errors.ErrResponse
 // @Failure      500  {object}	errors.ErrResponse
 // @Router       /projects/:id [put]
@@ -163,22 +181,24 @@ func (ph *ProjectHandler) Put(g *gin.Context) {
 		fmt.Println(err)
 	}
 	dp.ID = i
-	g.BindJSON(&dp)
 
-	validate := validator.New()
-
-	valerr := validate.Struct(dp)
-	if valerr != nil {
-		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(valerr))
+	err = g.BindJSON(&dp)
+	if err != nil {
+		g.AbortWithStatusJSON(http.StatusBadRequest, errors.NewErrResponse(err, "error.Put.bindJson.projects"))
 		return
+	}
+
+	if len(dp.State) > 0 {
+		err = dp.ValidateState()
+		if err != nil {
+			g.AbortWithStatusJSON(http.StatusBadRequest, errors.NewErrResponse(err, "error.Put.validateState.projects"))
+			return
+		}
 	}
 
 	dm, err := ph.Service.Update(g, dp.ToModel())
 	if err != nil {
-		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, ErrResponse{
-			Error:   err.Error(),
-			Message: "Cannot Save",
-		})
+		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.NewErrResponse(err, "error.Put.update.projects"))
 		return
 	}
 	g.JSON(http.StatusOK, dto.FromModel(dm))
@@ -191,7 +211,7 @@ func (ph *ProjectHandler) Put(g *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Param        id path int true "Project ID"
-// @Success      200  {object}  dto.Project
+// @Success      200  {object}  utils.Response
 // @Failure      400  {object}	errors.ErrResponse
 // @Failure      422  {object}	errors.ErrResponse
 // @Failure      500  {object}	errors.ErrResponse
@@ -201,10 +221,7 @@ func (ph *ProjectHandler) Delete(g *gin.Context) {
 
 	i, err := strconv.ParseInt(g.Param("id"), 10, 64)
 	if err != nil {
-		g.AbortWithStatusJSON(http.StatusUnprocessableEntity, errors.ErrResponse{
-			Err:     err,
-			Message: "Cannot parse ID",
-		})
+		g.AbortWithStatusJSON(http.StatusBadRequest, errors.NewErrResponse(err, "error.Delete.parseID.projects"))
 		return
 	}
 
@@ -213,13 +230,12 @@ func (ph *ProjectHandler) Delete(g *gin.Context) {
 	_, err = ph.Service.Delete(g, dp.ToModel())
 
 	if err != nil {
-		g.AbortWithStatusJSON(http.StatusBadRequest, errors.ErrResponse{
-			Err:     err,
-			Message: "Cannot delete project",
-		})
+		g.AbortWithStatusJSON(http.StatusBadRequest, errors.NewErrResponse(err, "error.Delete.delete.projects"))
 		return
 	}
 
-	g.JSON(http.StatusOK, map[string]string{"code": strconv.FormatInt(http.StatusOK, 10), "message": "Project " + g.Param("id") + " deleted successfully"})
+	g.JSON(http.StatusOK, utils.Response{
+		Message: "Project " + g.Param("id") + " deleted successfully",
+	})
 
 }
